# ReviewCompass

./: .gitignore  AGENTS.md  CLAUDE.md  TODO_NEXT_SESSION.md  deploy-manifest.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: README.md  pre-bash-precheck.sh  review-prompt-guide-inject.sh  session-record-capture-previous.sh  session-record-capture.sh
.codex/: hooks.json
.codex/hooks/: README.md  pre-bash-precheck.sh  review-prompt-guide-inject.sh  session-record-capture-current-on-session-end.sh  session-record-capture-current-on-todo.sh  (+3 more)
.reviewcompass/: README.md  pending-cross-feature-findings.md
config/: api-settings.yaml
docs/: extraction-mapping.md
intent/: DESIGN_PRINCIPLES.md  INTENT.md  NON_GOALS.md  TRACEABILITY.md
rollback-documents-2026-07-02/: README.md
stages/: decision-source-lint-config.yaml  feature-dependency.yaml  intent.yaml  operation-contracts.yaml  operation-registry.yaml  workflow-management-implementation-phases.yaml
tools/: README.md  build-deploy-package.py  check-workflow-action.py  commit-from-current-staged.py  conformance-evaluation-check.py  conformance-evaluation-cross-feature.py  document_link_lint.py  guarded-git-commit.py  make-commit-approval.py  make-post-write-manifest.py  make-proxy-approval.py  make-triage-decision.py  normal_output.py  self-improvement-check.py  session-log-converter.py  session-record-backfill.py  session-record-capture-previous-claude.py  session-record-capture-previous-codex.py  session-record-draft.py  session-record-extractor.py  session-record-promote-draft.py
(+8344 files in other folders)
