# pyproject.toml
# ReviewCompass の Python プロジェクト設定ファイル。
# 計画書 §4 行 209（Python の慣習に合わせた命名規則）と §5.9.7.1（API 経路先取り実装）参照。
# 利用者明示承認「W-2」（2026-05-26 セッション 29）。

[project]
name = "reviewcompass"
version = "0.1.0"
description = "仕様駆動レビューシステム（dual-reviewer 方式）"
requires-python = ">=3.9"

dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "respx>=0.21",
]

# setuptools の自動検索を抑制（リポジトリ直下に config／stages／intent／templates 等
# 複数のディレクトリがあり、パッケージ判定が曖昧になるため明示的に空指定）。
# 将来 src-layout に再構成するなら [tool.setuptools.packages.find] で再設定する。
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = [
  "tools/api_providers/tests",
  "tools/experiments/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
